@@ -14,7 +14,6 @@ import static org.opensearch.sql.expression.DSL.literal;
 import static org.opensearch.sql.expression.DSL.named;
 import static org.opensearch.sql.expression.DSL.ref;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import lombok.SneakyThrows;
@@ -68,7 +67,7 @@ class BucketAggregationBuilderTest {
             + "    \"order\" : \"asc\"\n"
             + "  }\n"
             + "}",
-        buildQuery(Arrays.asList(asc(named("age", ref("age", INTEGER))))));
+        buildQuery(List.of(asc(named("age", ref("age", INTEGER))))));
   }
 
   @Test
@@ -87,7 +86,7 @@ class BucketAggregationBuilderTest {
             + "    \"order\" : \"asc\"\n"
             + "  }\n"
             + "}",
-        buildQuery(Arrays.asList(asc(named(literal)))));
+        buildQuery(List.of(asc(named(literal)))));
   }
 
   @Test
@@ -102,7 +101,7 @@ class BucketAggregationBuilderTest {
             + "  }\n"
             + "}",
         buildQuery(
-            Arrays.asList(
+            List.of(
                 asc(
                     named(
                         "name",
@@ -132,7 +131,7 @@ class BucketAggregationBuilderTest {
             + "    \"order\" : \"asc\"\n"
             + "  }\n"
             + "}",
-        buildQuery(Arrays.asList(asc(named("name", parseExpression)))));
+        buildQuery(List.of(asc(named("name", parseExpression)))));
   }
 
   @Test
@@ -149,7 +148,7 @@ class BucketAggregationBuilderTest {
             + "    \"order\" : \"asc\"\n"
             + "  }\n"
             + "}",
-        buildQuery(Arrays.asList(asc(named("date", ref("date", dataType))))));
+        buildQuery(List.of(asc(named("date", ref("date", dataType))))));
   }
 
   @Test
@@ -165,7 +164,7 @@ class BucketAggregationBuilderTest {
             + "    \"order\" : \"asc\"\n"
             + "  }\n"
             + "}",
-        buildQuery(Arrays.asList(asc(named("date", ref("date", dataType))))));
+        buildQuery(List.of(asc(named("date", ref("date", dataType))))));
   }
 
   @ParameterizedTest(name = "{0}")
@@ -183,7 +182,7 @@ class BucketAggregationBuilderTest {
             + "    \"order\" : \"asc\"\n"
             + "  }\n"
             + "}",
-        buildQuery(Arrays.asList(asc(named("date", ref("date", dataType))))));
+        buildQuery(List.of(asc(named("date", ref("date", dataType))))));
   }
 
   @SneakyThrows
